<resources>
    <string name="app_name">MATTEOPPLÆRING</string>
    <string name="se_statistikk">Se statistikk</string>
    <string name="start_spill">Start spill</string>
    <string name="preferanser">Preferanser</string>
    <string name="app_icon">App icon</string>
    <string name="norsk">Norsk</string>
    <string name="tysk">Tysk</string>
    <string name="språk_forklaring">Velg enten norsk eller tysk</string>
    <string name="endre_språk">Endre språk</string>
    <string name="endre_ant_spm">Endre antall spørsmål</string>
    <string name="endre_ant_spm_info">Endre til 5, 10 eller 15</string>
    <string name="fjern">Fjern</string>
    <string name="svar">Svar</string>
    <string name="riktige_svar">Riktige svar:</string>
    <string name="feil_svar">Feil svar: </string>
    <string name="slett_statistikk">Slett statistikk</string>
    <string name="din_statistikk">Din statistikk</string>
    <string name="gratulerer">Gratulerer! Vil du spille igjen eller avslutte?</string>
    <string name="avsluttspill">Avslutt</string>
    <string name="fortsettspill">Fortsett spilling!</string>
    <string name="avslutt_fortsett">Avslutt eller fortsett?</string>
    <string name="totalt_antall_spill">Totalt antall spill:</string>
    <string name="totalt_antall_riktige">Totalt antall riktige svar:</string>
    <string name="totalt_antall_feil">Totalt antall feil svar:</string>
    <string name="erdusikker">Er du sikker på at du vil gå tilbake? Spillet vil avsluttes og du må starte på nytt.</string>
    <string name="tom_for_spm">Det er helt tomt for spørsmål! Du har svart på alle spørsmålene. Trykk ok for å gå ut av spillet. :)</string>
    <string name="tom_tittel">Spill ferdig!</string>
    <string name="svar_ikon">👌</string>
    <string name="fjern_ikon">❎</string>
    <string name="ok">OK</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_0">0</string>
</resources>