<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory>
        <ListPreference
            app:defaultValue="no"
            app:entries="@array/velgSpråk"
            app:entryValues="@array/velgSpråkValues"
            app:key="velgSpråk"
            app:negativeButtonText="@string/avsluttspill"
            app:title="@string/endre_språk"
            app:summary="@string/språk_forklaring" />
    </PreferenceCategory>
    <PreferenceCategory>
        <ListPreference
            app:defaultValue="5"
            app:entries="@array/antallSpm"
            app:entryValues="@array/antallSpmValues"
            app:key="velgAntSpm"
            app:negativeButtonText="@string/avsluttspill"
            app:title="@string/endre_ant_spm"
            app:summary="@string/endre_ant_spm_info"/>
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>