<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:duplicateParentState="true"
    android:fitsSystemWindows="true"
    android:fontFamily="sans-serif"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_marginBottom="75dp"
        android:background="?attr/colorPrimary"
        android:fontFamily="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:backgroundTint="@color/toolbar"
        app:titleTextColor="#FFFFFF">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="match_parent"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/app_icon"
            app:srcCompat="@drawable/icon" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-55dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/regnestykke"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:gravity="center"
            android:textSize="60sp" />

        <TextView
            android:id="@+id/svar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="60sp" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/covered_by_your_grace"
            android:textSize="25sp"
            android:onClick="trykk7"
            android:insetLeft="10dp"
            android:insetRight="10dp"
            android:insetBottom="10dp"
            android:text="@string/_7"
            app:backgroundTint="@color/kalkulatorKnap" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/covered_by_your_grace"
            android:textSize="25sp"
            android:onClick="trykk8"
            android:insetLeft="10dp"
            android:insetRight="10dp"
            android:insetBottom="10dp"
            android:text="@string/_8"
            app:backgroundTint="@color/kalkulatorKnap"/>

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/covered_by_your_grace"
            android:textSize="25sp"
            android:onClick="trykk9"
            android:insetLeft="10dp"
            android:insetRight="10dp"
            android:insetBottom="10dp"
            android:text="@string/_9"
            app:backgroundTint="@color/kalkulatorKnap"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/covered_by_your_grace"
            android:textSize="25sp"
            android:onClick="trykk4"
            android:insetLeft="10dp"
            android:insetRight="10dp"
            android:insetBottom="10dp"
            android:text="@string/_4"
            app:backgroundTint="@color/kalkulatorKnap"/>

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/covered_by_your_grace"
            android:textSize="25sp"
            android:onClick="trykk5"
            android:insetLeft="10dp"
            android:insetRight="10dp"
            android:insetBottom="10dp"
            android:text="@string/_5"
            app:backgroundTint="@color/kalkulatorKnap"/>

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/covered_by_your_grace"
            android:textSize="25sp"
            android:onClick="trykk6"
            android:insetLeft="10dp"
            android:insetRight="10dp"
            android:insetBottom="10dp"
            android:text="@string/_6"
            app:backgroundTint="@color/kalkulatorKnap"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/covered_by_your_grace"
            android:textSize="25sp"
            android:onClick="trykk1"
            android:insetLeft="10dp"
            android:insetRight="10dp"
            android:insetBottom="10dp"
            android:text="@string/_1"
            app:backgroundTint="@color/kalkulatorKnap"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/covered_by_your_grace"
            android:textSize="25sp"
            android:onClick="trykk2"
            android:insetLeft="10dp"
            android:insetRight="10dp"
            android:insetBottom="10dp"
            android:text="@string/_2"
            app:backgroundTint="@color/kalkulatorKnap"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/covered_by_your_grace"
            android:textSize="25sp"
            android:onClick="trykk3"
            android:insetLeft="10dp"
            android:insetRight="10dp"
            android:insetBottom="10dp"
            android:text="@string/_3"
            app:backgroundTint="@color/kalkulatorKnap"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/covered_by_your_grace"
            android:textSize="25sp"
            android:insetLeft="10dp"
            android:insetRight="10dp"
            android:insetBottom="10dp"
            android:text="@string/_0"
            android:onClick="trykk0"
            android:layout_width="0dp"
            app:backgroundTint="@color/kalkulatorKnap"/>

        <Button
            android:id="@+id/buttonNullstille"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:fontFamily="@font/covered_by_your_grace"
            android:insetLeft="10dp"
            android:insetRight="10dp"
            android:insetBottom="10dp"
            android:text="@string/fjern"
            android:onClick="fjern"
            app:backgroundTint="@color/fjernKnap"
            />


        <Button
            android:id="@+id/buttonEquals"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:fontFamily="@font/covered_by_your_grace"
            android:insetLeft="10dp"
            android:insetRight="10dp"
            android:insetBottom="10dp"
            android:onClick="svar"
            android:text="@string/svar"
            app:backgroundTint="@color/enter"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

       <!-- <Button
            android:id="@+id/start_spill_knapp"
            android:layout_width="115dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:fontFamily="@font/covered_by_your_grace"
            android:onClick="startSpill"
            android:text="@string/start_spill" /> -->

        <TextView
            android:id="@+id/riktigesvar"
            android:layout_width="match_parent"
            android:layout_height="21dp"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="50dp"
            android:text="@string/riktige_svar"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/feilsvar"
            android:layout_width="match_parent"
            android:layout_height="21dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:text="@string/feil_svar"
            android:textAlignment="center" />

    </LinearLayout>




</LinearLayout>