<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:duplicateParentState="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical"

    app:backgroundTint="@color/black"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_marginBottom="75dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:backgroundTint="@color/toolbar"
        app:titleTextColor="#FFFFFF">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="#FFFFFF" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/app_icon"
            app:srcCompat="@drawable/icon" />

    </androidx.appcompat.widget.Toolbar>

    <Button
        android:id="@+id/start_spill"
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:insetLeft="25dp"
        android:insetTop="10dp"
        android:insetRight="25dp"
        android:insetBottom="10dp"
        android:text="@string/start_spill"
        app:backgroundTint="@color/startKnap" />

    <Button
        android:id="@+id/se_statistikk"
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:insetLeft="25dp"
        android:insetTop="10dp"
        android:insetRight="25dp"
        android:insetBottom="10dp"
        android:text="@string/se_statistikk"
        app:backgroundTint="@color/seStatistikk" />

    <Button
        android:id="@+id/preferanser"
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:insetLeft="25dp"
        android:insetTop="10dp"
        android:insetRight="25dp"
        android:insetBottom="10dp"
        android:text="@string/preferanser"
        app:backgroundTint="@color/preferanser" />

</LinearLayout>